WYSIWYG updates - Make minimal setting the default - add `readOnly` prop, prevent readOnly rerendering - sidebar z-index override for remote browsers - simplify recording breadcrumb

--- a/frontend/src/components/controls/ReplayUI/style.scss
+++ b/frontend/src/components/controls/ReplayUI/style.scss
@@ -38,6 +38,10 @@
     .wr-resizeable {
         flex-shrink: 0;
     }
+
+    .wr-sidebar {
+        z-index: 100;
+    }
 }
 
 @media (max-width: 500px) {
